# chrome-cookies-to-playwright

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
.playwright/: cli.config.json
src/chrome_cookies_to_playwright/: __init__.py  _types.py  chrome.py  converter.py  main.py
tests/: test_chrome.py  test_converter.py  test_main.py
